Fix Alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11254,7 +11254,7 @@ body.template-color-1 {
 }
 
 .popup-mobile-menu .inner .menu-top h6.title {
-    color: #000000;
+    color: #0052D4;
     margin: 0;
     margin-top: 20px;
 }
